[gd_scene load_steps=10 format=3 uid="uid://btlcavlirkxet"]

[ext_resource type="Script" path="res://Main.gd" id="1_8sk4m"]
[ext_resource type="PackedScene" uid="uid://dp02gpc8hg7fw" path="res://gui/components/FlatButton.tscn" id="2_7ss6h"]
[ext_resource type="PackedScene" uid="uid://ca4qv5iivhn3v" path="res://gui/WelcomeView.tscn" id="2_d1bku"]
[ext_resource type="PackedScene" uid="uid://0ixhg8e0u8ib" path="res://gui/PianoView.tscn" id="2_r003a"]
[ext_resource type="Texture2D" uid="uid://xh41omtsrrr7" path="res://icons/godot.png" id="3_7khnb"]
[ext_resource type="Texture2D" uid="uid://5pxu35ux4hkn" path="res://icons/piano.png" id="3_cw50e"]
[ext_resource type="PackedScene" uid="uid://cwl0nh1ofpudo" path="res://gui/TunesView.tscn" id="3_k0wkn"]
[ext_resource type="Texture2D" uid="uid://ceui0jym6bois" path="res://icons/note.png" id="4_s2pjj"]
[ext_resource type="Texture2D" uid="uid://cunfeny5nkxdn" path="res://icons/volume.png" id="9_te82j"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8sk4m")

[node name="Views" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 110
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 48

[node name="WelcomeView" parent="Views" instance=ExtResource("2_d1bku")]
unique_name_in_owner = true
layout_mode = 2

[node name="PianoView" parent="Views" instance=ExtResource("2_r003a")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TunesView" parent="Views" instance=ExtResource("3_k0wkn")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 90)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 24.0
offset_top = 16.0
offset_right = -24.0
grow_horizontal = 2

[node name="Label" type="Label" parent="TopBar"]
layout_mode = 2
theme_override_colors/font_color = Color(0.471226, 0.726486, 0.564489, 1)
theme_override_font_sizes/font_size = 36
text = "GDSiON"

[node name="ViewSelectorFiller" type="Control" parent="TopBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ViewSelector" type="HBoxContainer" parent="TopBar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PianoButton" parent="TopBar/ViewSelector" instance=ExtResource("2_7ss6h")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Piano roll"
icon = ExtResource("3_cw50e")

[node name="TunesButton" parent="TopBar/ViewSelector" instance=ExtResource("2_7ss6h")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "MML Tunes"
icon = ExtResource("4_s2pjj")

[node name="GodotLogo" type="TextureRect" parent="TopBar"]
custom_minimum_size = Vector2(76, 76)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("3_7khnb")
expand_mode = 1
stretch_mode = 5

[node name="Volume" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 246.0
offset_bottom = -8.0
grow_vertical = 0

[node name="VolumeIcon" type="TextureRect" parent="Volume"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("9_te82j")
expand_mode = 1
stretch_mode = 5

[node name="VolumeSlider" type="HSlider" parent="Volume"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 1
value = 75.0

[node name="KenneyLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -249.0
offset_top = -27.0
offset_right = -7.0
offset_bottom = -7.0
grow_horizontal = 0
grow_vertical = 0
theme_type_variation = &"CreditsRichLabel"
bbcode_enabled = true
text = "Features icons and fonts by [url=https://kenney.nl/]Kenney[/url]"
